treewide: Migrate to ODS naming conventions
Change-Id: I5f7dc22f910b665a9d3d352752f11cd2a85cb226

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ disable_anchor: true
 ---
 <div class="welcome bg-primary text-white py-4">
   <div class="container">
-    <h1 class="text-lg-left text-center">Welcome to the LineageOS wiki!</h1>
+    <h1 class="text-lg-left text-center">Welcome to the Odd Solutions wiki!</h1>
     <p class="lead text-lg-left text-center">You can find various information, how-tos, build instructions and much more here in our wiki.</p>
   </div>
 </div>
@@ -36,7 +36,7 @@ disable_anchor: true
       <h4 class="font-weight-normal">Contribute to the wiki!</h4>
       <p>This wiki is powered by <a href="https://jekyllrb.com/">Jekyll</a>.</p>
       <ul>
-        <li>You can look at the source <a href="https://github.com/LineageOS/lineage_wiki">on GitHub</a>.</li>
+        <li>You can look at the source <a href="https://github.com/npjohnson/ods_wiki">on GitHub</a>.</li>
         <li>And of course, we have a comprehensive guide on <a href="{{ site.baseurl }}/contributing_wiki.html">contributing</a>.</li>
       </ul>
       <h4 class="font-weight-normal">Build for your device!</h4>
