Hide devices if url is not in pages
Change-Id: I902709e3a64e4f03a2d3c304222070643eb0e7eb

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -213,6 +213,10 @@ function showFilters() {
 </div>
 
 {%- for device in sorted %}
+
+{%- assign url = "devices/" | append: device.codename | append: "/" | relative_url %}
+{%- assign match = site.pages | where: "url", url %}
+
 {%- if device.vendor != lastVendor %}
 {%- assign lastVendor = device.vendor %}
 {% capture vendorId %}{{ device.vendor | slugify }}{% endcapture %}
@@ -224,12 +228,13 @@ function showFilters() {
 <div class="devices" data-vendor="{{ vendorId }}">
 {%- endif %}
 
-{%- assign url = "devices/" | append: device.codename | append: "/" | relative_url %}
 {%- if device.maintainers == empty %}
 {%- assign class="discontinued hidden" %}
 {%- else %}
 {%- assign class="" %}
 {%- endif -%}
+
+{%- if match != empty %}
 
 <div class="item {{ class }}" onClick="location.href='{{ url }}'" data-codename="{{ device.codename }}" data-variant="{{ device.variant }}" data-url="{{ url }}">
   <div class="deviceimage">
@@ -276,6 +281,8 @@ function showFilters() {
     </a>
   </div>
 </div>
+
+{%- endif %}
 
 {%- if sorted[forloop.index].vendor != lastVendor %}
 
