--- a/pages/devices.html
+++ b/pages/devices.html
@@ -203,6 +203,10 @@ function showFilters() {
 </div>
 
 {%- for device in sorted %}
+
+{%- assign url = "devices/" | append: device.codename | append: "/" | relative_url %}
+{%- assign match = site.pages | where: "url", url %}
+
 {%- if device.vendor != lastVendor %}
 {%- assign lastVendor = device.vendor %}
 {% capture vendorId %}{{ device.vendor | slugify }}{% endcapture %}
@@ -214,12 +218,13 @@ function showFilters() {
 <div class="devices" data-vendor="{{ vendorId }}">
 {%- endif %}
 
-{%- assign url = "devices/" | append: device.codename | append: "/" | relative_url %}
 {%- if device.maintainers == empty %}
 {%- assign class="discontinued hidden" %}
 {%- else %}
 {%- assign class="" %}
 {%- endif -%}
+
+{%- if match != empty %}
 
 <div class="item {{ class }}" onClick="location.href='{{ url }}'" data-codename="{{ device.codename }}" data-variant="{{ device.variant }}" data-url="{{ url }}">
   <div class="deviceimage">
@@ -266,6 +271,8 @@ function showFilters() {
     </a>
   </div>
 </div>
+
+{%- endif %}
 
 {%- if sorted[forloop.index].vendor != lastVendor %}
 </div> <!-- div class="devices" -->
