Hide unsupported devices
Change-Id: I7729b134c826673d1e8af910243646790a82ae5d

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -214,7 +214,11 @@ function showFilters() {
 
 {%- for device in sorted %}
 
+{%- if device.variant %}
+{%- assign url = "devices/" | append: device.codename | append: "/variant" | append: device.variant | append: "/" | relative_url %}
+{%- else %}
 {%- assign url = "devices/" | append: device.codename | append: "/" | relative_url %}
+{%- endif %}
 {%- assign match = site.pages | where: "url", url %}
 
 {%- if device.vendor != lastVendor %}
